<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wadii</string>
    <string name="type_msg">Type message</string>    
    
<string name="drawer_open">Open</string>
<string name="drawer_close">Close</string>
	
	<string name="hello">Hello World</string>
	<string name="loc_name">Name of Location</string>
	<string name="close">Close</string>
    <string name="show">Show Dialog</string>    
    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="forgot_my_pwd">I’ve forgotten my password?</string>
    <string name="my_chats">My Chats</string>
    <string name="all_chats">All Chats</string>
    <string name="search">Search</string>
    <string name="to">To:</string>
    <string name="edit">Edit</string>
    <string name="new_chat">New Chat</string>
    <string name="alert_wait">Please wait...</string>
    <string name="err_fields_empty">Please fill all the fields.</string>
    <string name="err_singup">Error occurred while signup:</string>
    <string name="err_login">Error occurred while login:</string>
    <string name="err_users">Error occurred while finding users:</string>
<string name="alert_loading">Loading...</string>
<string name="msg_no_user_found">No users found for chat!</string>
     <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="locLabel">Location:</string>
    <string name="goLabel">Go</string>
    <string name="latLabel">Lat</string>
    <string name="longLabel">Long</string>
    <string name="trackLabel">Track Present Location</string>
    <string name="satLabel">Sat</string>
    <string name="mapLabel">Map</string>
    <string name="place_name">Address</string>
    <string name="lat_deg">Latitude (o)</string>
    <string name="lon_deg">Longitude (o)</string>
    <string name="markerLabel">Map with Markers</string>
    <string name="indoorLabel">Indoor Map Example</string>
    <string name="quit">Exit</string>
    <string name="help_title">Help</string>
    <string name="satellite_label">Sat</string>
    <string name="traffic_label">Traffic</string>
    <string name="track_label">Track</string>
    <string name="help_text">This is the help file.</string>
    <string name="settings_text">We omit creating a preferences page here.
        See the project <i>PrefsFragments</i> for an introduction to constructing
        a fragments-based preferences page.</string>
    <string name="building_label">3D</string>
    <string name="suggestions_label">Meet up suggestions</string>
    <string name="indoor_label">Indoor</string>
    <string name="location_database_label">Location Database</string>
    <string name="routeLabel">Route Overlay on Map</string>
    <string name="mapme_label">Map Current Location</string>
    <string name="connected_toast">Location services connected</string>
    <string name="disconnected_toast">Location services disconnected</string>
    <string name="route_toggle_label">Route</string>
    <string name="eat_toggle_label">Eat</string>
    <string name="hc_toggle_label">Access</string>
    <string name="nomap_error">Error: target map not found</string>
    
     <string name="title_activity_positive">PositiveActivity</string>
   <string name="title_activity_negative">NegativeActivity</string>
   <string name="positive">Positive Activity</string>
   <string name="negative">Negative Activity</string>
   <string name="decision">Do you want to see your friend\'s location on a map?</string>
   <string name="positive_button">Yes</string>
   <string name="negative_button">No</string>
</resources>