<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/satellite"
        android:orderInCategory="0"
        android:showAsAction="ifRoom"
        android:title="@string/satellite_label"/>
    <item
        android:id="@+id/traffic"
        android:orderInCategory="10"
        android:showAsAction="ifRoom"
        android:title="@string/traffic_label"/>
    <item
        android:id="@+id/indoor"
        android:orderInCategory="20"
        android:showAsAction="ifRoom"
        android:title="@string/indoor_label"/>
    <item
        android:id="@+id/building"
        android:orderInCategory="30"
        android:showAsAction="ifRoom"
        android:title="@string/building_label"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
     <item
        android:id="@+id/suggestions"
        android:orderInCategory="30"
        android:showAsAction="ifRoom"
        android:title="@string/suggestions_label"/>

</menu>