<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/satellite_route"
        android:icon="@drawable/satellite_icon2"
        android:orderInCategory="0"
        android:showAsAction="always"
        android:title="@string/satLabel"/>
    <item
        android:id="@+id/route_toggle"
        android:icon="@drawable/route_icon"
        android:orderInCategory="10"
        android:showAsAction="always"
        android:title="@string/route_toggle_label"/>
    <item
        android:id="@+id/eat_toggle"
        android:icon="@drawable/knifefork_small"
        android:orderInCategory="20"
        android:showAsAction="always"
        android:title="@string/eat_toggle_label"/>
    <item
        android:id="@+id/hc_toggle"
        android:icon="@drawable/accessibility"
        android:orderInCategory="30"
        android:showAsAction="always"
        android:title="@string/hc_toggle_label"/>
    <item
        android:id="@+id/route_action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>