<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <LinearLayout
        android:id="@+id/grouping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

         
          <EditText
                android:id="@+id/loc_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:layout_weight="1.0"
                android:hint="@string/loc_name"
                android:inputType="text"
                android:lines="1" />
         
          <EditText
                android:id="@+id/lat_input"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:layout_weight="1.0"
                android:hint="@string/lat_deg"
                android:inputType="numberDecimal|numberSigned"
                android:lines="1" />

            <EditText
                android:id="@+id/lon_input"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:layout_weight="1.0"
                android:hint="@string/lon_deg"
                android:inputType="numberDecimal|numberSigned"
                android:lines="1" />
         
       
    </LinearLayout>

    <LinearLayout
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="add new" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="delete first" />

        <Button
            android:id="@+id/deleteall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="delete all" />
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

</LinearLayout>